# learning

./: .gitignore  README.md  raindrops_test.py
Angular-GettingStarted/APM/: package-lock.json  package.json
angular-cli/my-app/: package-lock.json  package.json
angularCli/angular-routing/: package-lock.json  package.json  webpack.config.js
aws/led_switch/: .gitignore  AgentInfo.sh  BashColorDefinitions.sh  InstallTools.sh  README.md  RunUnitTests.sh
aws/led_switch/src/: adc.c  (+3 more)
design_patterns/: design_patterns.md
k8s/001_nana_demo/: .envrc  README.md  generate-secret.sh  webapp.yaml
k8s/003_prometheus/: README.md  alert.yaml  config.yaml  oper.yaml  prom.yaml  secret.yaml
k8s/004_kaniko/: k8s-kind-config.template.yaml  sea-config.json  sea-kaniko-job.template.yaml  sea-kaniko-pod.template.yaml  sea-kaniko-pod.yaml  sea-kaniko-pvc.yaml  sea-supported-versions.json
k8s/demo_nana_001/: README.md  mongo-secret.template.yaml
k8s/full_tutorial_nana/: kind-config.yaml
perl/exif_rename/: README.md  exif_rename.pl
pulumi/abkGcpWeb/: .envrc  .gitignore  Pulumi.yaml  README.md  __main__.py
python/meta/: .envrc  pyproject.toml
python/meta/src/meta/: __init__.py  add.py  battleship.py  cafeteria.py  invert.py
python/meta/tests/: test_add.py  test_battleship.py  test_cafeteria.py  test_invert.py
python/python_puzzles/: CLAUDE.md  pyproject.toml
pythonRainDrops/: raindrops.py  raindrops_test.py
terraform/001_s3/: main.tf
terraform/002_ec2/: main.tf
terraform/003_ddb/: main.tf
terraform/004_aws_modules/: main.tf
terraform/006_backend/: main.tf
(+302 files in other folders)
